stairs added and some tunnel

--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1251,3 +1251,6 @@ PerfCounters.LastCompileMethod=Unknown
 [SuppressableDialogs]
 ExtrudeCoordsWarning=True
 
+[MessageLog]
+LastLogListing=LoadErrors
+
