New doors and stairs

--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,6 +135,7 @@ GridEnabled=False
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
 
 [ContentBrowser]
 ContentBrowserTab2.SourcesExpanded=False
@@ -183,7 +184,7 @@ ContentBrowserTab1.SelectedPaths=/Game
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -340,6 +341,17 @@ StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
 AssetViewerSettings.Settings=True
+SphereReflectionCapture.TransformCommon=True
+SphereReflectionCapture.ReflectionCapture=True
+SphereReflectionCapture.ReflectionCaptureMobile=True
+SphereReflectionCapture.Rendering=True
+SphereReflectionCapture.Tags=True
+SphereReflectionCapture.Cooking=True
+SphereReflectionCapture.Replication=True
+SphereReflectionCapture.Input=True
+Actor.Surface Materials=True
+Actor.Geometry=True
+Actor.Surface Properties=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -352,6 +364,7 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_TallGasCanister_01.SM_TallGasCanister_01;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_Wheel_01a.SM_WheelBarrel_Wheel_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Tarp_03.SM_Tarp_03;
@@ -371,7 +384,6 @@ RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_05a.SM_ConcreteBag_
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_04a.SM_ConcreteBag_04a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_01a.SM_ConcreteBag_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_03a.SM_ConcreteBag_03a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_02a.SM_ConcreteBag_02a;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1295,8 +1307,10 @@ LastLogListing=LoadErrors
 InstalledPlugins=XRVisualization
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Construction_VOL1/Meshes/SM_Crate_01a
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem1=/Game/FirstPersonBP/Maps/FirstPersonExampleMap_2
+MRUItem2=/Game/Construction_VOL1/Meshes/SM_Crate_01a
+MRUItem3=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode=1
