--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -364,26 +364,26 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_PlasticBarrel_01a.SM_PlasticBarrel_01a;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Crate_Lid_01a.SM_Crate_Lid_01a;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Crate_Base_01a.SM_Crate_Base_01a;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_PaintBucket_02.SM_PaintBucket_02;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_RollerMachine_Wheel_B_01a.SM_RollerMachine_Wheel_B_01a;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Spool_01a.SM_Spool_01a;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_Spool_01a.SM_Spool_01a;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_LightGenerator_01a.SM_LightGenerator_01a;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_RollerMachine_Base_01a.SM_RollerMachine_Base_01a;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_Roller_Machine_01a.SM_Roller_Machine_01a;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_FreightContainer_01.SM_FreightContainer_01;
+RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_PaintBucket_01.SM_PaintBucket_01;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Portapotty_01.SM_Portapotty_01;
+RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_WaterTank_01a.SM_WaterTank_01a;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_TallGasCanister_01.SM_TallGasCanister_01;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_Wheel_01a.SM_WheelBarrel_Wheel_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Tarp_03.SM_Tarp_03;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_SurveyorStand_01b.SM_SurveyorStand_01b;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_01a.SM_WheelBarrel_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Trafficbarrier_01.SM_Trafficbarrier_01;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_WaterTank_01a.SM_WaterTank_01a;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_propanetank_02.SM_propanetank_02;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_Ladder_01b.SM_Ladder_01b;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_HardHat_01a.SM_HardHat_01a;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_HardHat_01b.SM_HardHat_01b;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_CordWrap_01a.SM_CordWrap_01a;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_PlywoodTable_01a.SM_PlywoodTable_01a;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_ElectricDrill_01a.SM_ElectricDrill_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_BrickPaletteStack_Brick_01a.SM_BrickPaletteStack_Brick_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_05a.SM_ConcreteBag_05a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_04a.SM_ConcreteBag_04a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_01a.SM_ConcreteBag_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_ConcreteBag_03a.SM_ConcreteBag_03a;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
