slight changes to map balance

--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,6 +132,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 RotGridEnabled=False
 CurrentPosGridSize=0
 GridEnabled=False
+SnapScaleEnabled=False
 
 [MRU]
 MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
