--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -353,6 +353,56 @@ SphereReflectionCapture.Input=True
 Actor.Surface Materials=True
 Actor.Geometry=True
 Actor.Surface Properties=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
+SpotLight.TransformCommon=True
+SpotLight.Light=True
+SpotLight.Rendering=True
+SpotLight.Lightmass=True
+SpotLight.Performance=True
+SpotLight.LightFunction=True
+SpotLight.Light Profiles=True
+SpotLight.DistanceFieldShadows=True
+SpotLight.RayTracing=True
+SpotLight.Tags=True
+SpotLight.Cooking=True
+SpotLight.Actor=True
+RectLight.TransformCommon=True
+RectLight.Light=True
+RectLight.Rendering=True
+RectLight.Lightmass=True
+RectLight.Performance=True
+RectLight.LightFunction=True
+RectLight.Light Profiles=True
+RectLight.DistanceFieldShadows=True
+RectLight.RayTracing=True
+RectLight.Tags=True
+RectLight.Cooking=True
+RectLight.Actor=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -365,6 +415,9 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_PlasticBarrel_01a.SM_PlasticBarrel_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Crate_Lid_01a.SM_Crate_Lid_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Crate_Base_01a.SM_Crate_Base_01a;
@@ -382,9 +435,6 @@ RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_WaterTank_01a.SM_WaterTank_01a;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_TallGasCanister_01.SM_TallGasCanister_01;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_Wheel_01a.SM_WheelBarrel_Wheel_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Tarp_03.SM_Tarp_03;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_SurveyorStand_01b.SM_SurveyorStand_01b;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_01a.SM_WheelBarrel_01a;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
