--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -415,6 +415,7 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
@@ -434,7 +435,6 @@ RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Portapotty_01.SM_Portapotty_01;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_WaterTank_01a.SM_WaterTank_01a;
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_TallGasCanister_01.SM_TallGasCanister_01;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_WheelBarrel_Wheel_01a.SM_WheelBarrel_Wheel_01a;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
