--- a/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CombatMap_LevelDesign/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -403,6 +403,28 @@ DirectionalLight.LightFunction=True
 DirectionalLight.Tags=True
 DirectionalLight.Cooking=True
 DirectionalLight.Actor=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+Actor.Rendering=True
+Actor.Collision=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -415,6 +437,13 @@ Object=
 GeomModifier_Pen="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/RocketLauncherB_Ammo.RocketLauncherB_Ammo;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Pistols_B.Pistols_B;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Shotgun_B.Shotgun_B;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Assault_Rifle_B.Assault_Rifle_B;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Grenade_Launcher_B.Grenade_Launcher_B;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Sniper_Rifle_B.Sniper_Rifle_B;
+RecentlyPlaced=/Game/MilitaryWeapDark/Weapons/Rocket_launcher_B.Rocket_launcher_B;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
@@ -428,13 +457,6 @@ RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Spool_01a.SM_Spool_01a;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_Spool_01a.SM_Spool_01a;
 RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_LightGenerator_01a.SM_LightGenerator_01a;
 RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_RollerMachine_Base_01a.SM_RollerMachine_Base_01a;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_Roller_Machine_01a.SM_Roller_Machine_01a;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_FreightContainer_01.SM_FreightContainer_01;
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_PaintBucket_01.SM_PaintBucket_01;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_Portapotty_01.SM_Portapotty_01;
-RecentlyPlaced=/Game/Construction_VOL1/Meshes/SM_WaterTank_01a.SM_WaterTank_01a;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Construction_VOL2/Meshes/SM_TallGasCanister_01.SM_TallGasCanister_01;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
